# GPU-MultiSystem-gas-simulation

./: .gitignore  CMakeLists.txt  DESIGN.md  NOTES.md  README.md  anim.ipynb  check.ipynb  compexec.sh  perfs.csv  perfs2.ipynb  perfs_2.ipynb  perfs_sweep.csv  perfs_sweep2.csv  sweep_compexec.sh
profiling/: 192_512.txt  24_4096.txt  48_2048.txt  perfs.csv
profiling/O3/: gas_simulation
profiling/vanilla/: gas_simulation
prototyping/cpp/: compexec.sh  main.cu
prototyping/python_test/POC/: GPT_design_doc.md  compexec.sh
prototyping/python_test/POC/md_lj/: analysis.py  forces.py  integrator.py  main.py  utils.py
slides/: slides.md
src/: boundaries.h  integrators.h  interactions.h  main.cpp  particle_system.h  settings.h  simulation.cu  simulation.cuh  simulation_defs.h
